# htam

./: LICENSE.txt  README.md  README.txt  htam.py  setup.cfg  setup.py
htam/: __init__.py  classes.py  htam.py
htam/primelist/: pl0.json  pl1.json  pl10.json  pl101.json  pl102.json  pl104.json  pl105.json  pl11.json  pl12.json  pl13.json  pl14.json  pl15.json  pl16.json  pl17.json  pl18.json  pl19.json  pl2.json  pl20.json  pl21.json  pl22.json  pl23.json  pl24.json  pl25.json  pl26.json  pl27.json  pl28.json  pl29.json  pl3.json  pl30.json  pl31.json  pl32.json  pl33.json  pl34.json  pl35.json  pl36.json  pl37.json  pl38.json  pl39.json  pl4.json  pl40.json  (+38 more)
htam/primelist/primelists/: pl100.json  pl103.json  pl51.json  pl52.json  pl56.json  pl57.json  pl61.json  pl62.json  pl63.json  pl65.json  pl66.json  pl69.json  pl71.json  pl73.json  pl75.json  pl76.json  pl77.json  pl80.json  pl81.json  pl82.json  pl84.json  pl90.json  pl93.json  pl94.json  pl95.json  pl96.json  pl98.json  pl99.json
other/: appid.json  classes.py
tests/: addprimes.py  fastestprime.py  output.json  random_tests.py  test.py  test2.py
