[metadata]
name = htam
version = 1.2.1
description = Math package with 16 useful math functions like prime-counting function or modular congruences solver. This package is in constant improvement and you can email me to give me any idea.
long_description = file: README.txt
license = MIT
author = Cristiano Sansò
author_email = cristiano.sanso.04@gmail.com
keywords = math
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
zip_safe = False
python_requires = >= 3.7
test_suite = tests
packages =
    pysunsky
[bdist_wheel]
universal=0