[metadata]
name = htam
version = 1.3.5
description = Math package with 17 useful math functions like prime-counting function or modular congruences solver. This package is in constant improvement and you can email me to give me any idea.
long_description = file: README.md
license = MIT
author = Cristiano Sansò
author_email = cristiano.sanso.04@gmail.com
keywords = math
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
zip_safe = False
python_requires = >= 3.7
test_suite = tests
url = https://pypi.org/project/htam/
packages =
    pysunsky
[bdist_wheel]
universal=0