[metadata]
name = htam
version = 2.0.0
description = 
    Math package with 15 useful math functions like prime-counting function or modular congruences solver.
    Now it also includes 2 classes that performs very useful searches.
    This package is in constant improvement and you can email me to give me any idea.
long_description = file: README.md
license = MIT
author = Cristiano Sansò
author_email = cristiano.sanso.04@gmail.com
keywords = math
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
zip_safe = False
python_requires = >= 3.7
test_suite = tests
url = https://github.com/Zslez/htam
packages =
    pysunsky
[bdist_wheel]
universal=0